--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
@@ -28,7 +28,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.564.0",
-    "next": "16.1.6",
+    "next": "15.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-day-picker": "^8.10.1",
